fix graph-container overflow

--- a/src/main/webapp/app/course/learning-paths/learning-path-graph/learning-path-graph.component.scss
+++ b/src/main/webapp/app/course/learning-paths/learning-path-graph/learning-path-graph.component.scss
@@ -2,6 +2,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     .ngx-graph {
         width: auto;
